add loading files

--- a/modeldb.ipynb
+++ b/modeldb.ipynb
@@ -1,17 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "GHO2LbqgAGdu"
-   },
-   "source": [
-    "rule-based method"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -23,18 +14,53 @@
    "source": [
     "import os\n",
     "from openai import OpenAI\n",
-    "import os\n",
+    "import io\n",
     "import zipfile\n",
     "import json\n",
     "import re\n",
     "import msal\n",
     "import requests\n",
+    "import random\n",
     "from dotenv import load_dotenv"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load File"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "\n",
+    "# Azure application client info\n",
+    "client_id = os.getenv('CLIENT_ID')\n",
+    "client_secret = os.getenv('CLIENT_SECRET')\n",
+    "tenant_id = os.getenv('TENANT_ID')\n",
+    "# redirect_uri = 'https://login.microsoftonline.com/common/oauth2/nativeclient'\n",
+    "\n",
+    "# Get access token\n",
+    "authority = f'https://login.microsoftonline.com/{tenant_id}'\n",
+    "scopes = ['Files.Read', 'User.Read', 'Files.ReadWrite']\n",
+    "app = msal.PublicClientApplication(client_id, authority=authority)\n",
+    "\n",
+    "# Request token\n",
+    "result = app.acquire_token_interactive(scopes=scopes)\n",
+    "\n",
+    "if \"access_token\" in result:\n",
+    "    access_token = result[\"access_token\"]\n",
+    "    headers = {'Authorization': f'Bearer {access_token}'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -245,75 +271,186 @@
     }
    ],
    "source": [
-    "load_dotenv()\n",
-    "\n",
-    "# Azure application client info\n",
-    "# client_id = 'd6912246-965f-4255-ba2b-fc593915f837'\n",
-    "client_id = os.getenv('CLIENT_ID')\n",
-    "client_secret = os.getenv('CLIENT_SECRET')\n",
-    "tenant_id = os.getenv('TENANT_ID')\n",
-    "# redirect_uri = 'https://login.microsoftonline.com/common/oauth2/nativeclient'\n",
-    "\n",
-    "# Get access token\n",
-    "authority = f'https://login.microsoftonline.com/{tenant_id}'\n",
-    "scopes = ['Files.Read', 'User.Read']\n",
-    "app = msal.PublicClientApplication(client_id, authority=authority)\n",
-    "\n",
-    "# Request token\n",
-    "result = app.acquire_token_interactive(scopes=scopes)\n",
-    "\n",
-    "if \"access_token\" in result:\n",
-    "    access_token = result[\"access_token\"]\n",
-    "    headers = {'Authorization': f'Bearer {access_token}'}\n",
-    "\n",
     "# Access \"modeldb-code-analysis/modeldb-zips\"\n",
     "endpoint = 'https://graph.microsoft.com/v1.0/me/drive/root:/modeldb-code-analysis/modeldb-zips:/children'\n",
     "response = requests.get(endpoint, headers=headers)\n",
-    "zip_name_id = {}\n",
+    "file_code_id = {}\n",
     "if response.status_code == 200:\n",
     "    files_in_subfolder = response.json().get('value', [])\n",
     "    for file in files_in_subfolder:\n",
-    "        zip_name_id[file['name']] = file['id']\n",
+    "        file_code = file['name'][:-4]\n",
+    "        file_code_id[file_code] = file['id']\n",
     "        print(f\"File Name: {file['name']} - File ID: {file['id']}\")\n",
     "else:\n",
-    "    print(f\"Error: {response.status_code} - {response.text}\")\n",
-    "\n",
-    "    \n",
-    "#     endpoint = 'https://graph.microsoft.com/v1.0/me/drive/root/children'\n",
-    "#     response = requests.get(endpoint, headers=headers)\n",
-    "\n",
-    "#     if response.status_code == 200:\n",
-    "#         files = response.json().get('value', [])\n",
-    "#         folder_id = None\n",
-    "#         for file in files:\n",
-    "#             if file['name'] == 'modeldb-code-analysis' and file.get('folder'):\n",
-    "#                 folder_id = file['id']\n",
-    "#                 print(f\"Found folder 'modeldb-code-analysis' with ID: {folder_id}\")\n",
-    "#                 break\n",
-    "#         if not folder_id:\n",
-    "#             print(\"Folder 'modeldb-code-analysis' not found.\")\n",
-    "# else:\n",
-    "#     print(\"Failed to obtain access token\")"
+    "    print(f\"Error: {response.status_code} - {response.text}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded 114665.zip to /Users/tessakong/Desktop/CodeAnalysis/sample5/114665.zip\n",
+      "Unzip 114665.zip to /Users/tessakong/Desktop/CodeAnalysis/sample5/114665\n",
+      "Downloaded 118434.zip to /Users/tessakong/Desktop/CodeAnalysis/sample5/118434.zip\n",
+      "Unzip 118434.zip to /Users/tessakong/Desktop/CodeAnalysis/sample5/118434\n",
+      "Downloaded 114424.zip to /Users/tessakong/Desktop/CodeAnalysis/sample5/114424.zip\n",
+      "Unzip 114424.zip to /Users/tessakong/Desktop/CodeAnalysis/sample5/114424\n",
+      "Downloaded 105383.zip to /Users/tessakong/Desktop/CodeAnalysis/sample5/105383.zip\n",
+      "Unzip 105383.zip to /Users/tessakong/Desktop/CodeAnalysis/sample5/105383\n",
+      "Downloaded 113949.zip to /Users/tessakong/Desktop/CodeAnalysis/sample5/113949.zip\n",
+      "Unzip 113949.zip to /Users/tessakong/Desktop/CodeAnalysis/sample5/113949\n"
+     ]
     }
    ],
    "source": [
-    "len(zip_name_id)"
+    "# get shuffled file code\n",
+    "random.seed(20)\n",
+    "file_code_list = list(file_code_id.keys())\n",
+    "random.shuffle(file_code_list)\n",
+    "\n",
+    "sample_folder = '/Users/tessakong/Desktop/CodeAnalysis/sample5'\n",
+    "os.makedirs(sample_folder, exist_ok=True)\n",
+    "\n",
+    "for code in file_code_list[:5]:\n",
+    "    file_id = file_code_id[code]\n",
+    "    zip_filename = f\"{code}.zip\"\n",
+    "    local_path = os.path.join(sample_folder, zip_filename)\n",
+    "    extract_path = os.path.join(sample_folder, code)\n",
+    "\n",
+    "    # download zip file into local directory\n",
+    "    download_endpoint = f'https://graph.microsoft.com/v1.0/me/drive/items/{file_id}/content'\n",
+    "    response = requests.get(download_endpoint, headers=headers)\n",
+    "    \n",
+    "    if response.status_code == 200:\n",
+    "        with open(local_path, 'wb') as file:\n",
+    "            file.write(response.content)\n",
+    "        print(f\"Downloaded {zip_filename} to {local_path}\")\n",
+    "        \n",
+    "        with zipfile.ZipFile(local_path, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(extract_path)\n",
+    "        print(f\"Unzip {zip_filename} to {extract_path}\")\n",
+    "    else:\n",
+    "        print(f\"Failed to download {zip_filename}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files matching the rules have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/match_file/114665_mathched_file.txt\n",
+      "Concatenated file have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/raw_file/114665_raw_file.txt\n",
+      "Files matching the rules have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/match_file/118434_mathched_file.txt\n",
+      "Concatenated file have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/raw_file/118434_raw_file.txt\n",
+      "Files matching the rules have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/match_file/114424_mathched_file.txt\n",
+      "Concatenated file have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/raw_file/114424_raw_file.txt\n",
+      "Files matching the rules have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/match_file/105383_mathched_file.txt\n",
+      "Concatenated file have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/raw_file/105383_raw_file.txt\n",
+      "Files matching the rules have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/match_file/113949_mathched_file.txt\n",
+      "Concatenated file have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/raw_file/113949_raw_file.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "def filter_model(model_name, json_file_path, sample_folder):\n",
+    "    extract_folder = f'{sample_folder}/{model_name}'\n",
+    "    output_file_folder = f'{sample_folder}/match_file'\n",
+    "    os.makedirs(output_file_folder, exist_ok=True)\n",
+    "    # Load rules from the JSON file\n",
+    "    with open(json_file_path, 'r', encoding='utf-8') as json_file:\n",
+    "        rules = json.load(json_file)\n",
+    "\n",
+    "    # Convert rules to a dictionary of regex patterns and replacements\n",
+    "    pattern_mapping = {re.compile(pattern): replacement for pattern, replacement in rules.items()}\n",
+    "\n",
+    "    matched_files = []\n",
+    "    # Define acceptable file extensions\n",
+    "    acceptable_extensions = ('.py', '.cpp', '.java', '.m', '.txt', '.h', '.data', '.html', '.c', 'mod')  # Adjust as needed\n",
+    "\n",
+    "    # Traverse subfolders and files in the extraction folder\n",
+    "    for subfolder in os.listdir(extract_folder):\n",
+    "        subfolder_path = os.path.join(extract_folder, subfolder)\n",
+    "        if os.path.isdir(subfolder_path):  # Check if it's a directory\n",
+    "            for root, _, files in os.walk(subfolder_path):\n",
+    "                for file in files:\n",
+    "                    file_path = os.path.join(root, file)\n",
+    "                    # Check if the file extension is acceptable\n",
+    "                    if not file.lower().endswith(acceptable_extensions):\n",
+    "                        continue  # Skip the file if the extension is not acceptable\n",
+    "\n",
+    "                    # Open the file and check its content against the rules\n",
+    "                    with open(file_path, 'r', encoding='utf-8', errors='ignore') as f:\n",
+    "                        content = f.read()\n",
+    "                        for pattern, replacement_list in pattern_mapping.items():\n",
+    "                            if pattern.search(content):  # If any rule matches the file content\n",
+    "                                matched_files.append(file_path)\n",
+    "                                break  # Stop checking this file if one rule is matched\n",
+    "\n",
+    "    # Write matched file contents to a new text file\n",
+    "    output_file_path = f'{output_file_folder}/{model_name}_mathched_file.txt'\n",
+    "    with open(output_file_path, 'w', encoding='utf-8') as output_file:\n",
+    "        for file_path in matched_files:\n",
+    "            output_file.write(f'=== {file_path} ===\\n')  # Write the file path\n",
+    "            with open(file_path, 'r', encoding='utf-8', errors='ignore') as f:\n",
+    "                output_file.write(f.read())  # Write the file content\n",
+    "                output_file.write('\\n\\n')  # Add a newline between files\n",
+    "\n",
+    "    print(f\"Files matching the rules have been saved to {output_file_path}\")\n",
+    "\n",
+    "\n",
+    "def concat_model(model_name, sample_folder):\n",
+    "    extract_folder = f'{sample_folder}/{model_name}'\n",
+    "    output_file_folder = f'{sample_folder}/raw_file'\n",
+    "    os.makedirs(output_file_folder, exist_ok=True)\n",
+    "\n",
+    "    matched_files = []\n",
+    "    # Define acceptable file extensions\n",
+    "    acceptable_extensions = ('.py', '.cpp', '.java', '.m', '.txt', '.h', '.data', '.html', '.c', '.mod')  # Adjust as needed\n",
+    "\n",
+    "    # Traverse subfolders and files in the extraction folder\n",
+    "    for subfolder in os.listdir(extract_folder):\n",
+    "        subfolder_path = os.path.join(extract_folder, subfolder)\n",
+    "        if os.path.isdir(subfolder_path):  # Check if it's a directory\n",
+    "            for root, _, files in os.walk(subfolder_path):\n",
+    "                for file in files:\n",
+    "                    file_path = os.path.join(root, file)\n",
+    "                    # Check if the file extension is acceptable\n",
+    "                    if not file.lower().endswith(acceptable_extensions):\n",
+    "                        continue  # Skip the file if the extension is not acceptable\n",
+    "                    matched_files.append(file_path)\n",
+    "\n",
+    "    # Write matched file contents to a new text file\n",
+    "    output_file_path = f'{output_file_folder}/{model_name}_raw_file.txt'\n",
+    "    with open(output_file_path, 'w', encoding='utf-8') as output_file:\n",
+    "        for file_path in matched_files:\n",
+    "            output_file.write(f'=== {file_path} ===\\n')  # Write the file path\n",
+    "            with open(file_path, 'r', encoding='utf-8', errors='ignore') as f:\n",
+    "                output_file.write(f.read())  # Write the file content\n",
+    "                output_file.write('\\n\\n')  # Add a newline between files\n",
+    "\n",
+    "    print(f\"Concatenated file have been saved to {output_file_path}\")\n",
+    "\n",
+    "json_file_path = \"/Users/tessakong/Desktop/CodeAnalysis/manual_classifier_rules.json\"\n",
+    "for code in file_code_list[:5]:\n",
+    "    file_id = file_code_id[code]\n",
+    "    filter_model(code, json_file_path, sample_folder)\n",
+    "    concat_model(code,sample_folder)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Old Version"
    ]
   },
   {
@@ -584,7 +721,6 @@
     "    api_key=api_key,\n",
     "    organization=organization\n",
     ")\n",
-    "\n",
     "\n",
     "chat_completion = client.chat.completions.create(\n",
     "    model=\"gpt-3.5-turbo\",\n",
