Add:file screening done

--- a/modeldb.ipynb
+++ b/modeldb.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load File"
+    "# Load File to Local Path"
    ]
   },
   {
@@ -339,8 +339,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# File Screening"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def traverse_folder(path, score_metric, acceptable_extensions, pattern_mapping):\n",
+    "    for entry in os.listdir(path):\n",
+    "        full_path = os.path.join(path, entry)\n",
+    "        if os.path.isdir(full_path):\n",
+    "            print(f'Traverse folder: {full_path}')\n",
+    "            traverse_folder(full_path, score_metric, acceptable_extensions, pattern_mapping)\n",
+    "        else:\n",
+    "            # Check if the file extension is acceptable\n",
+    "            if not entry.lower().endswith(acceptable_extensions):\n",
+    "                continue  # Skip the file if the extension is not acceptable\n",
+    "            score = 0   \n",
+    "            with open(full_path, 'r', encoding='utf-8', errors='ignore') as f:\n",
+    "                content = f.read()\n",
+    "                for pattern in pattern_mapping.keys():\n",
+    "                    if pattern.search(content):  # If any rule matches the file content\n",
+    "                        score += 1\n",
+    "            score_metric.append((score, full_path))\n",
+    "                                      \n",
+    "\n",
+    "\n",
+    "def get_score_metric(model_name, json_file_path, sample_folder = '/Users/tessakong/Desktop/CodeAnalysis/sample5'):\n",
+    "    extract_folder = f'{sample_folder}/{model_name}'\n",
+    "    score_metric = []\n",
+    "    # Load rules from the JSON file\n",
+    "    with open(json_file_path, 'r', encoding='utf-8') as json_file:\n",
+    "        rules = json.load(json_file)\n",
+    "    # Convert rules to a dictionary of regex patterns and replacements\n",
+    "    pattern_mapping = {re.compile(pattern): replacement for pattern, replacement in rules.items()}\n",
+    "    matched_files = [] \n",
+    "    # Define acceptable file extensions\n",
+    "    acceptable_extensions = ('.py', '.cpp', '.java', '.m', '.txt', '.h', '.data', \n",
+    "                             '.html', '.c', '.mod', '.g', '.p', \".ode\", \".html\")  # Adjust as needed\n",
+    "\n",
+    "    traverse_folder(extract_folder, score_metric, acceptable_extensions, pattern_mapping)\n",
+    "    return score_metric\n",
+    "\n",
+    "def concat_files(code, sample_folder, file_path_list, topK):\n",
+    "    output_file_folder = f'{sample_folder}/match_file'\n",
+    "    os.makedirs(output_file_folder, exist_ok=True)\n",
+    "    output_file_path = f'{output_file_folder}/{code}_top{topK}.txt'\n",
+    "    with open(output_file_path, 'w', encoding='utf-8') as output_file:\n",
+    "        for file_path in file_path_list:\n",
+    "            output_file.write(f'=== {file_path} ===\\n')  # Write the file path\n",
+    "            with open(file_path, 'r', encoding='utf-8', errors='ignore') as f:\n",
+    "                output_file.write(f.read())  # Write the file content\n",
+    "                output_file.write('\\n\\n')  # Add a newline between files\n",
+    "\n",
+    "    print(f\"Concatenated file for model {code} have been saved to {output_file_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==============================Processing model 114665==============================\n",
+      "Traverse folder: /Users/tessakong/Desktop/CodeAnalysis/sample5/114665/plast\n",
+      "6\n",
+      "Concatenated file for model 114665 have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/match_file/114665_top6.txt\n",
+      "==============================Processing model 118434==============================\n",
+      "Traverse folder: /Users/tessakong/Desktop/CodeAnalysis/sample5/118434/KulviciusEtAl2008\n",
+      "3\n",
+      "Concatenated file for model 118434 have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/match_file/118434_top3.txt\n",
+      "==============================Processing model 114424==============================\n",
+      "Traverse folder: /Users/tessakong/Desktop/CodeAnalysis/sample5/114424/LampreyNMDAosc\n",
+      "1\n",
+      "Concatenated file for model 114424 have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/match_file/114424_top1.txt\n",
+      "==============================Processing model 105383==============================\n",
+      "Traverse folder: /Users/tessakong/Desktop/CodeAnalysis/sample5/105383/GPCv1.0.8\n",
+      "Traverse folder: /Users/tessakong/Desktop/CodeAnalysis/sample5/105383/GPCv1.0.8/cvode\n",
+      "29\n",
+      "Concatenated file for model 105383 have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/match_file/105383_top29.txt\n",
+      "==============================Processing model 113949==============================\n",
+      "Traverse folder: /Users/tessakong/Desktop/CodeAnalysis/sample5/113949/gnrh_passdend_simfiles\n",
+      "Traverse folder: /Users/tessakong/Desktop/CodeAnalysis/sample5/113949/gnrh_passdend_simfiles/output\n",
+      "5\n",
+      "Concatenated file for model 113949 have been saved to /Users/tessakong/Desktop/CodeAnalysis/sample5/match_file/113949_top5.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "json_file_path = \"/Users/tessakong/Desktop/CodeAnalysis/manual_classifier_rules.json\"\n",
+    "for code in file_code_list[:5]:\n",
+    "    print(f'==============================Processing model {code}==============================')\n",
+    "    file_id = file_code_id[code]\n",
+    "    scores = get_score_metric(code, json_file_path, sample_folder)\n",
+    "    propotion = 0.5\n",
+    "    topK = int(propotion * len(scores))\n",
+    "    print(topK)\n",
+    "    if topK == 0:\n",
+    "        print(f\"topK is 0 for model {code}, ignore\")\n",
+    "        continue\n",
+    "    file_path_list = [s[1] for s in scores[:topK]]\n",
+    "    concat_files(code, sample_folder, file_path_list, topK)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -372,9 +486,9 @@
     "    # Convert rules to a dictionary of regex patterns and replacements\n",
     "    pattern_mapping = {re.compile(pattern): replacement for pattern, replacement in rules.items()}\n",
     "\n",
-    "    matched_files = []\n",
+    "    matched_files = [] \n",
     "    # Define acceptable file extensions\n",
-    "    acceptable_extensions = ('.py', '.cpp', '.java', '.m', '.txt', '.h', '.data', '.html', '.c', 'mod')  # Adjust as needed\n",
+    "    acceptable_extensions = ('.py', '.cpp', '.java', '.m', '.txt', '.h', '.data', '.html', '.c', '.mod', '.g', '.p')  # Adjust as needed\n",
     "\n",
     "    # Traverse subfolders and files in the extraction folder\n",
     "    for subfolder in os.listdir(extract_folder):\n",
@@ -414,7 +528,7 @@
     "\n",
     "    matched_files = []\n",
     "    # Define acceptable file extensions\n",
-    "    acceptable_extensions = ('.py', '.cpp', '.java', '.m', '.txt', '.h', '.data', '.html', '.c', '.mod')  # Adjust as needed\n",
+    "    acceptable_extensions = ('.py', '.cpp', '.java', '.m', '.txt', '.h', '.data', '.html', '.c', '.mod', '.g', '.p')  # Adjust as needed\n",
     "\n",
     "    # Traverse subfolders and files in the extraction folder\n",
     "    for subfolder in os.listdir(extract_folder):\n",
