add:metadata testing

--- a/modeldb.ipynb
+++ b/modeldb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -21,6 +21,7 @@
     "import msal\n",
     "import requests\n",
     "import random\n",
+    "import pprint\n",
     "from dotenv import load_dotenv"
    ]
   },
@@ -450,6 +451,206 @@
     "    file_path_list = [s[1] for s in scores[:topK]]\n",
     "    concat_files(code, sample_folder, file_path_list, topK)\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Metadata Generation (currents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def api_request(url, method = 'GET', headers=None, params=None, json_data=None):\n",
+    "    '''\n",
+    "    Parameters:\n",
+    "      - url (str): The API endpoint.\n",
+    "      - method (str): The HTTP method ('GET', 'POST', etc.). Default is 'GET'.\n",
+    "      - headers (dict): Optional headers for the request.\n",
+    "      - params (dict): Optional URL parameters for the request.\n",
+    "      - json_data (dict): Optional JSON data for POST requests.\n",
+    "\n",
+    "      Returns:\n",
+    "      - response (dict): Parsed JSON response from the API.\n",
+    "    '''\n",
+    "    url = \"https://modeldb.science/\" + url\n",
+    "    try:\n",
+    "        # Determine the request method\n",
+    "        if method.upper() == 'GET':\n",
+    "            response = requests.get(url, headers=headers, params=params)\n",
+    "        elif method.upper() == 'POST':\n",
+    "            response = requests.post(url, headers=headers, json=json_data)\n",
+    "        else:\n",
+    "            raise ValueError(\"Unsupported HTTP method: {}\".format(method))\n",
+    "\n",
+    "        # Check for HTTP errors\n",
+    "        response.raise_for_status()\n",
+    "\n",
+    "        # Parse JSON response\n",
+    "        return response.json()\n",
+    "\n",
+    "    except requests.exceptions.HTTPError as http_err:\n",
+    "        print(f\"HTTP error occurred: {http_err}\")\n",
+    "    except requests.exceptions.RequestException as req_err:\n",
+    "        print(f\"Error occurred: {req_err}\")\n",
+    "    except ValueError as json_err:\n",
+    "        print(f\"JSON decode error: {json_err}\")\n",
+    "\n",
+    "    return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['celltypes', 'currents', 'genes', 'modelconcepts', 'models', 'modeltypes', 'papers', 'receptors', 'regions', 'simenvironments', 'transmitters']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat_url = \"/api/v1/\"\n",
+    "metadata_categories = api_request(cat_url, method = 'GET')\n",
+    "print(metadata_categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'celltypes': 278,\n",
+      " 'currents': 64,\n",
+      " 'genes': 62,\n",
+      " 'modelconcepts': 214,\n",
+      " 'models': 1878,\n",
+      " 'modeltypes': 21,\n",
+      " 'papers': 80975,\n",
+      " 'receptors': 60,\n",
+      " 'regions': 47,\n",
+      " 'simenvironments': 174,\n",
+      " 'transmitters': 25}\n"
+     ]
+    }
+   ],
+   "source": [
+    "count_metadata = {}\n",
+    "for e in metadata_categories:\n",
+    "    temp_url = cat_url + e\n",
+    "    count_metadata[e] = len(api_request(temp_url, method = 'GET'))\n",
+    "pprint.pprint(count_metadata)\n",
+    "model_url = \"/api/v1/currents/name\"\n",
+    "model_current_list = api_request(model_url, method = 'GET')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================model 118434 has 37609 tokens===================\n",
+      "Generated metadata: I Na,t, I T low threshold, I K, I K,leak, I M, I h\n",
+      "===================model 105383 has 406312 tokens===================\n",
+      "Generated metadata: I Sodium, I Calcium, Na/Ca exchanger, Na/K pump\n",
+      "===================model 114424 has 1606 tokens===================\n",
+      "Generated metadata: I K,Ca, I K, I K,leak, I Calcium\n",
+      "===================model 114665 has 8053684 tokens===================\n",
+      "Generated metadata: I Na,p, I Na,t, I K,leak, I K, I Calcium\n",
+      "===================model 113949 has 58552 tokens===================\n",
+      "Generated metadata: I K\n"
+     ]
+    }
+   ],
+   "source": [
+    "api_key = os.getenv('API_KEY')\n",
+    "organization=os.getenv('ORGANIZATION')\n",
+    "\n",
+    "match_file_folder = '/Users/tessakong/Desktop/CodeAnalysis/sample5/match_file'\n",
+    "save_prompt = \"You are a neuroscience expert specializing in ion channel and current analysis. Given the following content: please identify the most relevant ion currents from the following list. The list includes: ['I Chloride', 'I Na,p', 'I Na,t', 'I L high threshold', 'I N', 'I T low threshold', 'I p,q', 'I A', 'I K', 'I K,leak', 'I M', 'I h', 'I Cl,Ca', 'I K,Ca', 'I CNG', 'I CAN', 'I Sodium', 'I Calcium', 'I Mixed', 'I Potassium', 'I A, slow', 'ATP-sensitive potassium current', 'I_KHT', 'I_KLT', 'I_HERG', 'Late Na', 'Na/Ca exchanger', 'I_Na,Ca', 'I_SERCA', 'KCNQ1', 'I_Ks', 'I Krp', 'I R', 'I Q', 'I_K,Na', 'Na/K pump', 'I_AHP', 'I ANO2', 'I trp', 'I Cl, leak', 'I Na, leak', 'I Ca,p', 'I_KD', 'Osmosis-driven water flux', 'KCC2', 'NKCC1', 'Ca pump', 'I_HCO3', 'Channelrhodopsin (ChR)', 'Kir', 'I MI', 'I TRPM8', 'Kir2 leak', 'I Na, slow inactivation', 'Na+-glutamate transporter', 'IK Bkca', 'I Ca SOCC', 'IK Skca', 'KCC1', 'NBC', 'I C', 'TASK channel', 'Kir, inactivating', 'I TRPM4'].\\n\\nBased on this content, please provide the most relevant ion current(s), and list them separated by commas.\"\n",
+    "\n",
+    "output_json_path = os.path.join(sample_folder, \"prompt_test.json\")\n",
+    "# if os.path.exists(output_json_path):\n",
+    "#     with open(output_json_path, 'r', encoding='utf-8') as json_file:\n",
+    "#         output_data = json.load(json_file)\n",
+    "#         if not isinstance(output_data, list):\n",
+    "#             output_data = []\n",
+    "# else:\n",
+    "#     output_data = []\n",
+    "output_data = []\n",
+    "\n",
+    "new_prompt_block = {\n",
+    "    \"prompt\": save_prompt,\n",
+    "    \"results\": []\n",
+    "}\n",
+    "\n",
+    "client = OpenAI(api_key=api_key, organization=organization) \n",
+    "\n",
+    "for entry in os.listdir(match_file_folder):\n",
+    "    full_path = os.path.join(match_file_folder, entry)\n",
+    "    code = entry.split('_')[0]\n",
+    "\n",
+    "    with open(full_path, 'r', encoding='utf-8') as file:\n",
+    "        file_content = file.read()\n",
+    "        print(f'===================model {code} has {len(file_content)} tokens===================')\n",
+    "        file_content = file_content[:5000]\n",
+    "    prompt = (\n",
+    "    f\"You are a neuroscience expert specializing in ion channel and current analysis. \"\n",
+    "    f\"Given the following content:\\n\\n{file_content}\\n\\n\"\n",
+    "    f\"Please identify the most relevant ion currents from the following list. \"\n",
+    "    f\"The list includes: ['I Chloride', 'I Na,p', 'I Na,t', 'I L high threshold', 'I N', 'I T low threshold', 'I p,q', \"\n",
+    "    f\"'I A', 'I K', 'I K,leak', 'I M', 'I h', 'I Cl,Ca', 'I K,Ca', 'I CNG', 'I CAN', 'I Sodium', 'I Calcium', \"\n",
+    "    f\"'I Mixed', 'I Potassium', 'I A, slow', 'ATP-sensitive potassium current', 'I_KHT', 'I_KLT', 'I_HERG', \"\n",
+    "    f\"'Late Na', 'Na/Ca exchanger', 'I_Na,Ca', 'I_SERCA', 'KCNQ1', 'I_Ks', 'I Krp', 'I R', 'I Q', 'I_K,Na', \"\n",
+    "    f\"'Na/K pump', 'I_AHP', 'I ANO2', 'I trp', 'I Cl, leak', 'I Na, leak', 'I Ca,p', 'I_KD', 'Osmosis-driven water flux', \"\n",
+    "    f\"'KCC2', 'NKCC1', 'Ca pump', 'I_HCO3', 'Channelrhodopsin (ChR)', 'Kir', 'I MI', 'I TRPM8', 'Kir2 leak', \"\n",
+    "    f\"'I Na, slow inactivation', 'Na+-glutamate transporter', 'IK Bkca', 'I Ca SOCC', 'IK Skca', 'KCC1', 'NBC', \"\n",
+    "    f\"'I C', 'TASK channel', 'Kir, inactivating', 'I TRPM4'].\\n\\n\"\n",
+    "    f\"Based on this content, please provide the most relevant ion current(s), just list them separated by commas, DO NOT analyze, \"\n",
+    "    f\"This is an example: current 1, current 2,...\"\n",
+    "    )\n",
+    "\n",
+    "    chat_completion = client.chat.completions.create(\n",
+    "        model=\"gpt-4o\",\n",
+    "        messages=[{\"role\": \"user\", \"content\": prompt}],\n",
+    "    )\n",
+    "\n",
+    "    response_dict = chat_completion.to_dict()\n",
+    "    metadata = response_dict[\"choices\"][0][\"message\"][\"content\"].strip()\n",
+    "    print(\"Generated metadata:\", metadata)\n",
+    "\n",
+    "    new_result = {\n",
+    "        \"file_content\": file_content,\n",
+    "        \"model_code\": code,\n",
+    "        \"metadata\": metadata\n",
+    "    }\n",
+    "    new_prompt_block[\"results\"].append(new_result)\n",
+    "\n",
+    "with open(output_json_path, 'w', encoding='utf-8') as json_file:\n",
+    "    json.dump(new_prompt_block, json_file, ensure_ascii=False, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# old version"
    ]
   },
   {
