fix: add sorting to scores

--- a/modeldb.ipynb
+++ b/modeldb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -442,6 +442,7 @@
     "    print(f'==============================Processing model {code}==============================')\n",
     "    file_id = file_code_id[code]\n",
     "    scores = get_score_metric(code, json_file_path, sample_folder)\n",
+    "    scores.sort(key = lambda x: x[0], reverse = True)\n",
     "    propotion = 0.5\n",
     "    topK = int(propotion * len(scores))\n",
     "    print(topK)\n",
@@ -462,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -536,9 +537,9 @@
       " 'currents': 64,\n",
       " 'genes': 62,\n",
       " 'modelconcepts': 214,\n",
-      " 'models': 1878,\n",
+      " 'models': 1879,\n",
       " 'modeltypes': 21,\n",
-      " 'papers': 80975,\n",
+      " 'papers': 81024,\n",
       " 'receptors': 60,\n",
       " 'regions': 47,\n",
       " 'simenvironments': 174,\n",
@@ -558,22 +559,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "===================model 118434 has 37609 tokens===================\n",
-      "Generated metadata: I Na,t, I T low threshold, I K, I K,leak, I M, I h\n",
-      "===================model 105383 has 406312 tokens===================\n",
-      "Generated metadata: I Sodium, I Calcium, Na/Ca exchanger, Na/K pump\n",
+      "===================model 118434 has 42906 tokens===================\n",
+      "Generated metadata: I Na,t, I A, I K\n",
+      "===================model 105383 has 630400 tokens===================\n",
+      "Generated metadata: I Na, INa, I Calcium, I Calcium, I_Ks, Na/Ca exchanger, Na/K pump\n",
       "===================model 114424 has 1606 tokens===================\n",
       "Generated metadata: I K,Ca, I K, I K,leak, I Calcium\n",
-      "===================model 114665 has 8053684 tokens===================\n",
-      "Generated metadata: I Na,p, I Na,t, I K,leak, I K, I Calcium\n",
-      "===================model 113949 has 58552 tokens===================\n",
+      "===================model 114665 has 2645986 tokens===================\n",
+      "Generated metadata: I Na,p, I Na,t, I K, I Sodium, I Potassium\n",
+      "===================model 113949 has 60036 tokens===================\n",
       "Generated metadata: I K\n"
      ]
     }
