test modeldb.ipynb annadu

--- a/modeldb.ipynb
+++ b/modeldb.ipynb
@@ -22,7 +22,7 @@
     "import requests\n",
     "import random\n",
     "import pprint\n",
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n"
    ]
   },
   {
